--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from oneHot import oneHot\n",
-    "from imblearn.over_sampling import SMOTE\n",
+    "#from imblearn.over_sampling import SMOTE\n",
     "\n",
     "from getConfig   import getConfig\n",
     "from getData     import getData\n",
@@ -17,34 +17,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config   = getConfig()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "original record count: 113,923\n"
+      "original record count: 284,807\n"
      ]
     }
    ],
    "source": [
-    "config   = getConfig()\n",
     "df       = getData(config)\n",
-    "df = df.sample(frac=0.4)\n",
+    "#df = df.sample(frac=0.4)\n",
     "print(\"original record count: {:,}\".format(df.shape[0]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "original ratio: 113,732 : 191\n"
+      "original ratio: 284,315 : 492\n"
      ]
     }
    ],
@@ -56,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
