--- a/dataAnalysis.ipynb
+++ b/dataAnalysis.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
        "[]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -127,16 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "d = df.describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -165,131 +156,132 @@
        "      <th>V2</th>\n",
        "      <th>V3</th>\n",
        "      <th>...</th>\n",
-       "      <th>V26</th>\n",
        "      <th>V27</th>\n",
        "      <th>V28</th>\n",
        "      <th>Amount</th>\n",
+       "      <th>Class</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>56962.000</td>\n",
-       "      <td>5.696e+04</td>\n",
-       "      <td>56962.000</td>\n",
-       "      <td>56962.000</td>\n",
+       "      <td>284807.000</td>\n",
+       "      <td>2.848e+05</td>\n",
+       "      <td>2.848e+05</td>\n",
+       "      <td>2.848e+05</td>\n",
        "      <td>...</td>\n",
-       "      <td>56962.000</td>\n",
-       "      <td>5.696e+04</td>\n",
-       "      <td>56962.000</td>\n",
-       "      <td>56962.000</td>\n",
+       "      <td>2.848e+05</td>\n",
+       "      <td>2.848e+05</td>\n",
+       "      <td>284807.000</td>\n",
+       "      <td>284807.000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>94990.627</td>\n",
-       "      <td>-9.743e-04</td>\n",
-       "      <td>-0.010</td>\n",
-       "      <td>-0.005</td>\n",
+       "      <td>94813.860</td>\n",
+       "      <td>1.166e-15</td>\n",
+       "      <td>3.417e-16</td>\n",
+       "      <td>-1.373e-15</td>\n",
        "      <td>...</td>\n",
+       "      <td>-3.666e-16</td>\n",
+       "      <td>-1.220e-16</td>\n",
+       "      <td>88.350</td>\n",
        "      <td>0.002</td>\n",
-       "      <td>7.502e-04</td>\n",
-       "      <td>0.002</td>\n",
-       "      <td>89.712</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>47594.729</td>\n",
-       "      <td>1.995e+00</td>\n",
-       "      <td>1.682</td>\n",
-       "      <td>1.543</td>\n",
+       "      <td>47488.146</td>\n",
+       "      <td>1.959e+00</td>\n",
+       "      <td>1.651e+00</td>\n",
+       "      <td>1.516e+00</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.481</td>\n",
-       "      <td>3.957e-01</td>\n",
-       "      <td>0.373</td>\n",
-       "      <td>249.401</td>\n",
+       "      <td>4.036e-01</td>\n",
+       "      <td>3.301e-01</td>\n",
+       "      <td>250.120</td>\n",
+       "      <td>0.042</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
-       "      <td>1.000</td>\n",
+       "      <td>0.000</td>\n",
        "      <td>-5.641e+01</td>\n",
-       "      <td>-72.716</td>\n",
-       "      <td>-33.681</td>\n",
+       "      <td>-7.272e+01</td>\n",
+       "      <td>-4.833e+01</td>\n",
        "      <td>...</td>\n",
-       "      <td>-1.653</td>\n",
-       "      <td>-8.840e+00</td>\n",
-       "      <td>-9.618</td>\n",
+       "      <td>-2.257e+01</td>\n",
+       "      <td>-1.543e+01</td>\n",
+       "      <td>0.000</td>\n",
        "      <td>0.000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>54042.500</td>\n",
-       "      <td>-9.180e-01</td>\n",
-       "      <td>-0.601</td>\n",
-       "      <td>-0.894</td>\n",
+       "      <td>54201.500</td>\n",
+       "      <td>-9.204e-01</td>\n",
+       "      <td>-5.985e-01</td>\n",
+       "      <td>-8.904e-01</td>\n",
        "      <td>...</td>\n",
-       "      <td>-0.325</td>\n",
-       "      <td>-7.032e-02</td>\n",
-       "      <td>-0.052</td>\n",
-       "      <td>5.640</td>\n",
+       "      <td>-7.084e-02</td>\n",
+       "      <td>-5.296e-02</td>\n",
+       "      <td>5.600</td>\n",
+       "      <td>0.000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>84864.500</td>\n",
-       "      <td>2.348e-02</td>\n",
-       "      <td>0.062</td>\n",
-       "      <td>0.181</td>\n",
+       "      <td>84692.000</td>\n",
+       "      <td>1.811e-02</td>\n",
+       "      <td>6.549e-02</td>\n",
+       "      <td>1.798e-01</td>\n",
        "      <td>...</td>\n",
-       "      <td>-0.051</td>\n",
-       "      <td>1.822e-03</td>\n",
-       "      <td>0.011</td>\n",
+       "      <td>1.342e-03</td>\n",
+       "      <td>1.124e-02</td>\n",
        "      <td>22.000</td>\n",
+       "      <td>0.000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>139455.000</td>\n",
-       "      <td>1.317e+00</td>\n",
-       "      <td>0.796</td>\n",
-       "      <td>1.023</td>\n",
+       "      <td>139320.500</td>\n",
+       "      <td>1.316e+00</td>\n",
+       "      <td>8.037e-01</td>\n",
+       "      <td>1.027e+00</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.242</td>\n",
-       "      <td>9.153e-02</td>\n",
-       "      <td>0.078</td>\n",
-       "      <td>76.987</td>\n",
+       "      <td>9.105e-02</td>\n",
+       "      <td>7.828e-02</td>\n",
+       "      <td>77.165</td>\n",
+       "      <td>0.000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
-       "      <td>172774.000</td>\n",
-       "      <td>2.452e+00</td>\n",
-       "      <td>22.058</td>\n",
-       "      <td>4.188</td>\n",
+       "      <td>172792.000</td>\n",
+       "      <td>2.455e+00</td>\n",
+       "      <td>2.206e+01</td>\n",
+       "      <td>9.383e+00</td>\n",
        "      <td>...</td>\n",
-       "      <td>3.463</td>\n",
-       "      <td>1.114e+01</td>\n",
-       "      <td>33.848</td>\n",
-       "      <td>10199.440</td>\n",
+       "      <td>3.161e+01</td>\n",
+       "      <td>3.385e+01</td>\n",
+       "      <td>25691.160</td>\n",
+       "      <td>1.000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             Time         V1         V2         V3    ...            V26        V27        V28     Amount\n",
-       "count   56962.000  5.696e+04  56962.000  56962.000    ...      56962.000  5.696e+04  56962.000  56962.000\n",
-       "mean    94990.627 -9.743e-04     -0.010     -0.005    ...          0.002  7.502e-04      0.002     89.712\n",
-       "std     47594.729  1.995e+00      1.682      1.543    ...          0.481  3.957e-01      0.373    249.401\n",
-       "min         1.000 -5.641e+01    -72.716    -33.681    ...         -1.653 -8.840e+00     -9.618      0.000\n",
-       "25%     54042.500 -9.180e-01     -0.601     -0.894    ...         -0.325 -7.032e-02     -0.052      5.640\n",
-       "50%     84864.500  2.348e-02      0.062      0.181    ...         -0.051  1.822e-03      0.011     22.000\n",
-       "75%    139455.000  1.317e+00      0.796      1.023    ...          0.242  9.153e-02      0.078     76.987\n",
-       "max    172774.000  2.452e+00     22.058      4.188    ...          3.463  1.114e+01     33.848  10199.440"
+       "             Time         V1         V2         V3  ...        V27        V28      Amount       Class\n",
+       "count  284807.000  2.848e+05  2.848e+05  2.848e+05  ...  2.848e+05  2.848e+05  284807.000  284807.000\n",
+       "mean    94813.860  1.166e-15  3.417e-16 -1.373e-15  ... -3.666e-16 -1.220e-16      88.350       0.002\n",
+       "std     47488.146  1.959e+00  1.651e+00  1.516e+00  ...  4.036e-01  3.301e-01     250.120       0.042\n",
+       "min         0.000 -5.641e+01 -7.272e+01 -4.833e+01  ... -2.257e+01 -1.543e+01       0.000       0.000\n",
+       "25%     54201.500 -9.204e-01 -5.985e-01 -8.904e-01  ... -7.084e-02 -5.296e-02       5.600       0.000\n",
+       "50%     84692.000  1.811e-02  6.549e-02  1.798e-01  ...  1.342e-03  1.124e-02      22.000       0.000\n",
+       "75%    139320.500  1.316e+00  8.037e-01  1.027e+00  ...  9.105e-02  7.828e-02      77.165       0.000\n",
+       "max    172792.000  2.455e+00  2.206e+01  9.383e+00  ...  3.161e+01  3.385e+01   25691.160       1.000"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "d = df.describe()\n",
     "d"
    ]
   },
