--- a/autoencoder/viewResults.ipynb
+++ b/autoencoder/viewResults.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "dataLoc= \"/home/tbrownex/\"\n",
-    "actuals = pd.read_csv(dataLoc+\"actuals.csv\")\n",
+    "actuals = pd.read_csv(dataLoc+\"NNresults.csv\")\n",
     "preds = pd.read_csv(dataLoc+\"preds.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
        "True"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,14 +45,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9288215210808597\n"
+      "0.000367514880402654\n"
      ]
     }
    ],
@@ -64,14 +64,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.0556247689464808\n"
+      "0.3224995663181919\n"
      ]
     }
    ],
@@ -81,6 +81,13 @@
     "baseline = np.reshape(baseline, newshape=actuals.shape)\n",
     "print(computeMSE(actuals, baseline))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
