--- a/dataAnalysis.ipynb
+++ b/dataAnalysis.ipynb
@@ -19,6 +19,23 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ready\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"ready\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "setPandasOptions()"
@@ -26,21 +43,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "config = getConfig()\n",
-    "df = getData(config)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "del df[\"Time\"]"
+    "df = getData(config)\n",
+    "\n",
+    "del df[\"Time\"]\n",
+    "del df[\"Class\"]"
    ]
   },
   {
