--- a/dataAnalysis.ipynb
+++ b/dataAnalysis.ipynb
@@ -19,17 +19,9 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ready\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(\"ready\")"
+    "setPandasOptions()"
    ]
   },
   {
@@ -38,7 +30,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "setPandasOptions()"
+    "config = getConfig()\n",
+    "df = getData(config)"
    ]
   },
   {
@@ -47,9 +40,213 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "config = getConfig()\n",
-    "df = getData(config)\n",
-    "\n",
+    "tom = df.corr()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Time</th>\n",
+       "      <th>V1</th>\n",
+       "      <th>V2</th>\n",
+       "      <th>V3</th>\n",
+       "      <th>...</th>\n",
+       "      <th>V27</th>\n",
+       "      <th>V28</th>\n",
+       "      <th>Amount</th>\n",
+       "      <th>Class</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>V17</th>\n",
+       "      <td>-0.073</td>\n",
+       "      <td>-0.000</td>\n",
+       "      <td>-0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>-0.000</td>\n",
+       "      <td>0.007</td>\n",
+       "      <td>-0.326</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>V14</th>\n",
+       "      <td>-0.099</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>-0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.034</td>\n",
+       "      <td>-0.303</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>V12</th>\n",
+       "      <td>0.124</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>-0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>-0.010</td>\n",
+       "      <td>-0.261</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>V10</th>\n",
+       "      <td>0.031</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>-0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.000</td>\n",
+       "      <td>-0.000</td>\n",
+       "      <td>-0.102</td>\n",
+       "      <td>-0.217</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>V16</th>\n",
+       "      <td>0.012</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>-0.004</td>\n",
+       "      <td>-0.197</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>V21</th>\n",
+       "      <td>0.045</td>\n",
+       "      <td>-0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>-0.000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.106</td>\n",
+       "      <td>0.040</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>V2</th>\n",
+       "      <td>-0.011</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.000</td>\n",
+       "      <td>-0.000</td>\n",
+       "      <td>-0.531</td>\n",
+       "      <td>0.091</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>V4</th>\n",
+       "      <td>-0.105</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>-0.000</td>\n",
+       "      <td>-0.000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.000</td>\n",
+       "      <td>-0.000</td>\n",
+       "      <td>0.099</td>\n",
+       "      <td>0.133</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>V11</th>\n",
+       "      <td>-0.248</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>-0.000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.000</td>\n",
+       "      <td>-0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.155</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Class</th>\n",
+       "      <td>-0.012</td>\n",
+       "      <td>-0.101</td>\n",
+       "      <td>0.091</td>\n",
+       "      <td>-0.193</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.018</td>\n",
+       "      <td>0.010</td>\n",
+       "      <td>0.006</td>\n",
+       "      <td>1.000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Time     V1     V2     V3  ...    V27    V28  Amount  Class\n",
+       "V17   -0.073 -0.000 -0.000  0.000  ...  0.000 -0.000   0.007 -0.326\n",
+       "V14   -0.099  0.000 -0.000  0.000  ...  0.000  0.000   0.034 -0.303\n",
+       "V12    0.124  0.000 -0.000  0.000  ... -0.000  0.000  -0.010 -0.261\n",
+       "V10    0.031  0.000 -0.000  0.000  ... -0.000 -0.000  -0.102 -0.217\n",
+       "V16    0.012  0.000  0.000  0.000  ...  0.000  0.000  -0.004 -0.197\n",
+       "...      ...    ...    ...    ...  ...    ...    ...     ...    ...\n",
+       "V21    0.045 -0.000  0.000 -0.000  ... -0.000  0.000   0.106  0.040\n",
+       "V2    -0.011  0.000  1.000  0.000  ... -0.000 -0.000  -0.531  0.091\n",
+       "V4    -0.105  0.000 -0.000 -0.000  ... -0.000 -0.000   0.099  0.133\n",
+       "V11   -0.248  0.000  0.000 -0.000  ... -0.000 -0.000   0.000  0.155\n",
+       "Class -0.012 -0.101  0.091 -0.193  ...  0.018  0.010   0.006  1.000"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tom.sort_values(\"Class\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "del df[\"Time\"]\n",
     "del df[\"Class\"]"
    ]
