--- a/99 viewResults.ipynb
+++ b/99 viewResults.ipynb
@@ -21,21 +21,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "dataloc = \"/home/tbrownex/\"\n",
     "file    = \"NNresults.csv\"\n",
-    "df = pd.read_csv(dataloc+file)\n",
-    "\n",
-    "del df[\"featureCount\"]\n",
-    "del df[\"optimizer\"]"
+    "df = pd.read_csv(dataloc+file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -59,49 +56,163 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>activation</th>\n",
-       "      <th>dropout</th>\n",
-       "      <th>finalCost</th>\n",
-       "      <th>l1Size</th>\n",
-       "      <th>l2Size</th>\n",
-       "      <th>l3Size</th>\n",
-       "      <th>l4Size</th>\n",
-       "      <th>l5Size</th>\n",
+       "      <th>F1-score</th>\n",
+       "      <th>FalseNeg</th>\n",
+       "      <th>FalsePos</th>\n",
+       "      <th>G-score</th>\n",
+       "      <th>...</th>\n",
        "      <th>learningRate</th>\n",
+       "      <th>loss</th>\n",
+       "      <th>precision</th>\n",
+       "      <th>recall</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>relu</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0006</td>\n",
-       "      <td>48</td>\n",
-       "      <td>24</td>\n",
-       "      <td>12</td>\n",
-       "      <td>24</td>\n",
-       "      <td>48</td>\n",
-       "      <td>0.0005</td>\n",
+       "      <th>39</th>\n",
+       "      <td>0.520</td>\n",
+       "      <td>58.000</td>\n",
+       "      <td>17.000</td>\n",
+       "      <td>0.540</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.009</td>\n",
+       "      <td>0.702</td>\n",
+       "      <td>0.408</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>67</th>\n",
+       "      <td>0.200</td>\n",
+       "      <td>14.000</td>\n",
+       "      <td>645.000</td>\n",
+       "      <td>0.310</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.002</td>\n",
+       "      <td>0.058</td>\n",
+       "      <td>0.115</td>\n",
+       "      <td>0.857</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>63</th>\n",
+       "      <td>0.190</td>\n",
+       "      <td>14.000</td>\n",
+       "      <td>721.000</td>\n",
+       "      <td>0.300</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.002</td>\n",
+       "      <td>0.056</td>\n",
+       "      <td>0.104</td>\n",
+       "      <td>0.857</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>77</th>\n",
+       "      <td>0.190</td>\n",
+       "      <td>13.000</td>\n",
+       "      <td>699.000</td>\n",
+       "      <td>0.310</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.005</td>\n",
+       "      <td>0.054</td>\n",
+       "      <td>0.108</td>\n",
+       "      <td>0.867</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>0.180</td>\n",
+       "      <td>13.000</td>\n",
+       "      <td>785.000</td>\n",
+       "      <td>0.290</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.002</td>\n",
+       "      <td>0.065</td>\n",
+       "      <td>0.098</td>\n",
+       "      <td>0.867</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>88</th>\n",
+       "      <td>0.180</td>\n",
+       "      <td>14.000</td>\n",
+       "      <td>758.000</td>\n",
+       "      <td>0.290</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.004</td>\n",
+       "      <td>0.062</td>\n",
+       "      <td>0.100</td>\n",
+       "      <td>0.857</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>0.180</td>\n",
+       "      <td>14.000</td>\n",
+       "      <td>739.000</td>\n",
+       "      <td>0.300</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.003</td>\n",
+       "      <td>0.064</td>\n",
+       "      <td>0.102</td>\n",
+       "      <td>0.857</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>0.170</td>\n",
+       "      <td>13.000</td>\n",
+       "      <td>807.000</td>\n",
+       "      <td>0.290</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.003</td>\n",
+       "      <td>0.056</td>\n",
+       "      <td>0.095</td>\n",
+       "      <td>0.867</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>0.170</td>\n",
+       "      <td>13.000</td>\n",
+       "      <td>807.000</td>\n",
+       "      <td>0.290</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.004</td>\n",
+       "      <td>0.064</td>\n",
+       "      <td>0.095</td>\n",
+       "      <td>0.867</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>0.170</td>\n",
+       "      <td>13.000</td>\n",
+       "      <td>835.000</td>\n",
+       "      <td>0.280</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.004</td>\n",
+       "      <td>0.064</td>\n",
+       "      <td>0.092</td>\n",
+       "      <td>0.867</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  activation  dropout  finalCost  l1Size  l2Size  l3Size  l4Size  l5Size  \\\n",
-       "0       relu      0.0     0.0006      48      24      12      24      48   \n",
-       "\n",
-       "   learningRate  \n",
-       "0        0.0005  "
+       "    F1-score  FalseNeg  FalsePos  G-score  ...  learningRate  loss precision  recall\n",
+       "39     0.520    58.000    17.000    0.540  ...         0.000 0.009     0.702   0.408\n",
+       "67     0.200    14.000   645.000    0.310  ...         0.002 0.058     0.115   0.857\n",
+       "63     0.190    14.000   721.000    0.300  ...         0.002 0.056     0.104   0.857\n",
+       "77     0.190    13.000   699.000    0.310  ...         0.005 0.054     0.108   0.867\n",
+       "26     0.180    13.000   785.000    0.290  ...         0.002 0.065     0.098   0.867\n",
+       "88     0.180    14.000   758.000    0.290  ...         0.004 0.062     0.100   0.857\n",
+       "22     0.180    14.000   739.000    0.300  ...         0.003 0.064     0.102   0.857\n",
+       "13     0.170    13.000   807.000    0.290  ...         0.003 0.056     0.095   0.867\n",
+       "34     0.170    13.000   807.000    0.290  ...         0.004 0.064     0.095   0.867\n",
+       "45     0.170    13.000   835.000    0.280  ...         0.004 0.064     0.092   0.867"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.sort_values(by=[\"finalCost\"])[:10]"
+    "df.sort_values(by=[\"F1-score\"], ascending=False)[:10]"
    ]
   },
   {
